@@ -51,7 +51,7 @@ public class Sell extends StdCommand
 		throws java.io.IOException
 	{
 		final Vector<String> origCmds=new XVector<String>(commands);
-		final Environmental shopkeeper=CMLib.english().parseShopkeeper(mob,commands,"Sell what to whom?");
+		final Environmental shopkeeper=CMLib.english().parseShopkeeper(mob,commands,"to", "Sell what to whom?");
 		if(shopkeeper==null)
 			return false;
 		if(commands.size()==0)
